--- a/incomplete_stories/pubspec.yaml
+++ b/incomplete_stories/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_database: ^9.0.9
   flutterfire_ui: ^0.1.0-dev.2
   provider: ^6.0.0
+  flutter_switch: ^0.3.2
 
 dev_dependencies:
   flutter_test:
