--- a/incomplete_stories/pubspec.yaml
+++ b/incomplete_stories/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   flutterfire_ui: ^0.1.0-dev.2
   provider: ^6.0.0
   flutter_switch: ^0.3.2
+  shared_preferences:
+  uuid: 3.0.6
 
 dev_dependencies:
   flutter_test:
