--- a/incomplete_stories/pubspec.yaml
+++ b/incomplete_stories/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_switch: ^0.3.2
   shared_preferences:
   uuid: 3.0.6
+  google_sign_in: ^5.0.0
 
 dev_dependencies:
   flutter_test:
@@ -65,6 +66,9 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+  assets:
+    - assets/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
