--- a/incomplete_stories/pubspec.yaml
+++ b/incomplete_stories/pubspec.yaml
@@ -44,10 +44,20 @@ dependencies:
   shared_preferences:
   uuid: 3.0.6
   google_sign_in: ^5.0.0
+  google_fonts: ^2.3.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons:
+
+flutter_icons:
+
+  android: true
+
+  ios: true
+
+  image_path: "assets/icon.png"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
